Implemented Main function